--- a/fourthPage.html
+++ b/fourthPage.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <script src="https://cdn.optimizely.com/js/17473902683.js"></script>
+
   <!-- Start VWO Asynchronous Code -->
   <script type='text/javascript'>
     var _vwo_code = (function () {
