--- a/fourthPage.html
+++ b/fourthPage.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="//try.abtasty.com/927628ef6beb6f6ef6cd6a1d52b5a70c.js"></script>
   <script type="text/javascript">
     document.cookie = "test=12356787";
-    localStorage.setItem('bgcolor',true);
+//     localStorage.setItem('bgcolor',true);
     function getCookies() {
     let pairs = document.cookie.split(/; ?/),
         cookies = {};
