--- a/fourthPage.html
+++ b/fourthPage.html
@@ -25,6 +25,8 @@ console.log(localStorage.getItem('bgcolor'));
 
   <!-- Start VWO Asynchronous Code -->
   <script type='text/javascript'>
+    window._vwo_pc_custom = {t:100,a:100}; 
+    
     var _vwo_code = (function () {
       var account_id = location.search.split('id=')[1] ? location.search.split('id=')[1] : 3000146,
         settings_tolerance = 2000,
