--- a/fourthPage.html
+++ b/fourthPage.html
@@ -2,26 +2,24 @@
 <html lang="en">
 
 <head>
-  <!-- Start VWO Smartcode (Synchronous) -->
+  <!-- Start VWO Smartcode (Asynchronous) -->
 <script type='text/javascript'>
 window._vwo_pc_custom = {t:100,a:100}; 
-var _vis_opt_account_id = location.search.split('id=')[1] ? location.search.split('id=')[1] : '916';
-var _vis_opt_protocol = (('https:' == document.location.protocol) ? 'https://' : 'http://');
-document.write('<s' + 'cript src="' + _vis_opt_protocol +
-'dev.visualwebsiteoptimizer.com/deploy/js_visitor_settings.php?v=1&a='+_vis_opt_account_id+'&url='
-+encodeURIComponent(document.URL)+'&random='+Math.random()+'" type="text/javascript">' + '<\/s' + 'cript>');
+window._vwo_code = window._vwo_code || (function(){
+    console.log("I'm new!");
+var account_id = location.search.split('id=')[1] ? location.search.split('id=')[1] : '916',
+settings_tolerance=3000000,
+library_tolerance=5000,
+use_existing_jquery=false,
+is_spa=0,
+hide_element='body',
+
+/* DO NOT EDIT BELOW THIS LINE */
+f=false,d=document,code={use_existing_jquery:function(){return use_existing_jquery;},library_tolerance:function(){return library_tolerance;},finish:function(){if(!f){f=true;var a=d.getElementById('_vis_opt_path_hides');if(a)a.parentNode.removeChild(a);}},finished:function(){return f;},load:function(a){var b=d.createElement('script');b.src=a;b.type='text/javascript';b.innerText;b.onerror=function(){_vwo_code.finish();};d.getElementsByTagName('head')[0].appendChild(b);},init:function(){
+settings_timer=setTimeout('_vwo_code.finish()',settings_tolerance);var a=d.createElement('style'),b=hide_element?hide_element+'{opacity:0 !important;filter:alpha(opacity=0) !important;background:none !important;}':'',h=d.getElementsByTagName('head')[0];a.setAttribute('id','_vis_opt_path_hides');a.setAttribute('type','text/css');if(a.styleSheet)a.styleSheet.cssText=b;else a.appendChild(d.createTextNode(b));h.appendChild(a);this.load('//dev.visualwebsiteoptimizer.com/j.php?a='+account_id+'&u='+encodeURIComponent(d.URL)+'&f='+(+is_spa)+'&r='+Math.random()+'&mode='+encodeURIComponent(window.name));return settings_timer; }};window._vwo_settings_timer = code.init(); return code; }());
+
 </script>
-<script type='text/javascript'>
-if(typeof(_vis_opt_settings_loaded) == "boolean") { document.write('<s' + 'cript src="' + _vis_opt_protocol +
-'d5phz18u4wuww.cloudfront.net/vis_opt.js" type="text/javascript">' + '<\/s' + 'cript>'); }
-/* if your site already has jQuery 1.4.2, replace vis_opt.js with vis_opt_no_jquery.js above */
-</script>
-<script type='text/javascript'>
-if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initialize) == "function") {
-        _vis_opt_top_initialize(); vwo_$(document).ready(function() { _vis_opt_bottom_initialize(); });
-}
-</script>
-<!-- End VWO Smartcode (Synchronous) -->
+<!-- End VWO Smartcode (Asynchronous) -->
   
   <script type="text/javascript">
     window.VWO = window.VWO || [];
