--- a/fourthPage.html
+++ b/fourthPage.html
@@ -6,7 +6,7 @@
 <script type='text/javascript'>
 window._vwo_pc_custom = {t:100,a:100}; 
 </script>
-<script src="https://dacdn.wingified.com/lib/417595.js"></script>
+<script src="https:////reverseproxy.vwo-main-account.workers.dev/vwo/lib/417595.js"></script>
 <!-- End one smart code -->
   <!-- Start VWO Smartcode (Asynchronous) 
 <script type='text/javascript'>
