--- a/fourthPage.html
+++ b/fourthPage.html
@@ -11,19 +11,18 @@ window._vwo_pc_custom = {t:100,a:100};
   <!-- Start VWO Smartcode (Asynchronous) -->
 <script type='text/javascript'>
 window._vwo_pc_custom = {t:100,a:100}; 
+
 window._vwo_code = window._vwo_code || (function(){
-    console.log("I'm new!");
-var account_id = location.search.split('id=')[1] ? location.search.split('id=')[1] : '916',
-settings_tolerance=3000000,
+var account_id = location.search.split('id=')[1] ? location.search.split('id=')[1] : '417595',
+settings_tolerance=5000,
 library_tolerance=5000,
 use_existing_jquery=false,
-is_spa=0,
+is_spa=1,
 hide_element='body',
 
 /* DO NOT EDIT BELOW THIS LINE */
 f=false,d=document,code={use_existing_jquery:function(){return use_existing_jquery;},library_tolerance:function(){return library_tolerance;},finish:function(){if(!f){f=true;var a=d.getElementById('_vis_opt_path_hides');if(a)a.parentNode.removeChild(a);}},finished:function(){return f;},load:function(a){var b=d.createElement('script');b.src=a;b.type='text/javascript';b.innerText;b.onerror=function(){_vwo_code.finish();};d.getElementsByTagName('head')[0].appendChild(b);},init:function(){
-settings_timer=setTimeout('_vwo_code.finish()',settings_tolerance);var a=d.createElement('style'),b=hide_element?hide_element+'{opacity:0 !important;filter:alpha(opacity=0) !important;background:none !important;}':'',h=d.getElementsByTagName('head')[0];a.setAttribute('id','_vis_opt_path_hides');a.setAttribute('type','text/css');if(a.styleSheet)a.styleSheet.cssText=b;else a.appendChild(d.createTextNode(b));h.appendChild(a);this.load('//dev.visualwebsiteoptimizer.com/j.php?a='+account_id+'&u='+encodeURIComponent(d.URL)+'&f='+(+is_spa)+'&r='+Math.random()+'&mode='+encodeURIComponent(window.name));return settings_timer; }};window._vwo_settings_timer = code.init(); return code; }());
-
+window.settings_timer=setTimeout(function () {_vwo_code.finish() },settings_tolerance);var a=d.createElement('style'),b=hide_element?hide_element+'{opacity:0 !important;filter:alpha(opacity=0) !important;background:none !important;}':'',h=d.getElementsByTagName('head')[0];a.setAttribute('id','_vis_opt_path_hides');a.setAttribute('type','text/css');a.setAttribute('nonce','abcdef1234');if(a.styleSheet)a.styleSheet.cssText=b;else a.appendChild(d.createTextNode(b));h.appendChild(a);this.load('//dev.visualwebsiteoptimizer.com/j.php?a='+account_id+'&u='+encodeURIComponent(d.URL)+'&f='+(+is_spa)+'&r='+Math.random());return settings_timer; }};window._vwo_settings_timer = code.init(); return code; }());
 </script>
 <!-- End VWO Smartcode (Asynchronous) -->
   
